<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        style="@style/Divider"
        android:layout_marginTop="@dimen/spacing_normal" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:orientation="vertical"
            android:paddingStart="@dimen/spacing_big"
            android:paddingEnd="@dimen/spacing_big"
            android:paddingBottom="@dimen/spacing_large">

            <TextView
                style="@style/LicensesTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/licenses_timeline_view_title" />

            <TextView
                style="@style/LicensesDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_big"
                android:text="@string/licenses_timeline_view_content" />

            <TextView
                style="@style/LicensesTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/licenses_ink_page_indicator_title" />

            <TextView
                style="@style/LicensesDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_big"
                android:text="@string/licenses_ink_page_indicator_content" />

            <TextView
                style="@style/LicensesTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/licenses_arc_progress_stack_view_title" />

            <TextView
                style="@style/LicensesDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_big"
                android:text="@string/licenses_arc_progress_stack_view_content" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>