<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/spacing_smaller">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_big"
            android:layout_marginTop="@dimen/spacing_normal"
            android:layout_marginBottom="@dimen/spacing_tiny"
            android:text="@string/durable_event"
            android:textColor="@color/teal_700"
            android:textSize="@dimen/font_normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_big"
            android:layout_marginEnd="@dimen/spacing_big"
            android:text="@string/durable_event_summary"
            android:textColor="@color/teal_200"
            android:textSize="@dimen/font_small" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:scaleType="fitCenter"
            android:src="@drawable/period_mode_simple" />

        <View
            style="@style/Divider"
            android:layout_marginStart="@dimen/spacing_big"
            android:layout_marginTop="@dimen/spacing_smaller"
            android:layout_marginEnd="@dimen/spacing_big" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_big"
            android:layout_marginTop="@dimen/spacing_normal"
            android:layout_marginBottom="@dimen/spacing_tiny"
            android:text="@string/normal_event"
            android:textColor="@color/teal_700"
            android:textSize="@dimen/font_normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_big"
            android:layout_marginEnd="@dimen/spacing_big"
            android:text="@string/normal_event_summary"
            android:textColor="@color/teal_200"
            android:textSize="@dimen/font_small" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:scaleType="fitCenter"
            android:src="@drawable/normal_mode_simple" />
    </LinearLayout>

</ScrollView>
